# sejm_api

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/sejm_client/: __init__.py  client.py  eli_client.py  exceptions.py  http.py  utils.py
src/sejm_client/models/: __init__.py  acts.py  bills.py  common.py  mps.py  prints.py  processes.py  votings.py
tests/: test_client_behaviour.py  test_utils.py
