[project]
name = "sejm-client"
version = "0.1.0"
description = "Typed Python client for the Polish Sejm legislative APIs"
readme = "README.md"
authors = [
    { name = "rafa", email = "rafal.kuka94@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "tenacity>=9.1.4",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"
